Fix SNMP unit tests on OSX, improve tag config doc
closes #592

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1,27 +1,18 @@
 # Telegraf configuration
 
 # Telegraf is entirely plugin driven. All metrics are gathered from the
-# declared inputs.
+# declared inputs, and sent to the declared outputs.
 
-# Even if a plugin has no configuration, it must be declared in here
-# to be active. Declaring a plugin means just specifying the name
-# as a section with no variables. To deactivate a plugin, comment
-# out the name and any variables.
+# Plugins must be declared in here to be active.
+# To deactivate a plugin, comment out the name and any variables.
 
-# Use 'telegraf -config telegraf.toml -test' to see what metrics a config
+# Use 'telegraf -config telegraf.conf -test' to see what metrics a config
 # file would generate.
 
-# One rule that plugins conform to is wherever a connection string
-# can be passed, the values '' and 'localhost' are treated specially.
-# They indicate to the plugin to use their own builtin configuration to
-# connect to the local system.
-
-# NOTE: The configuration has a few required parameters. They are marked
-# with 'required'. Be sure to edit those to make this configuration work.
-
-# Tags can also be specified via a normal map, but only one form at a time:
+# Global tags can be specified here in key="value" format.
 [tags]
-  # dc = "us-east-1"
+  # dc = "us-east-1" # will tag all metrics with dc=us-east-1
+  # rack = "1a"
 
 # Configuration for telegraf agent
 [agent]
@@ -97,9 +88,9 @@
   # By default, telegraf will gather stats for all devices including
   # disk partitions.
   # Setting devices will restrict the stats to the specified devices.
-  # Devices=["sda","sdb"]
+  # devices = ["sda", "sdb"]
   # Uncomment the following line if you do not need disk serial numbers.
-  # SkipSerialNumber = true
+  # skip_serial_number = true
 
 # Read metrics about memory usage
 [[inputs.mem]]
