--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -75,7 +75,7 @@
   # Whether to report total system cpu stats or not
   totalcpu = true
   # Comment this line if you want the raw CPU time metrics
-  drop = ["cpu_time"]
+  drop = ["time_*"]
 
 # Read metrics about disk usage by mount point
 [[inputs.disk]]
