--- a/internal/config/testdata/telegraf-agent.toml
+++ b/internal/config/testdata/telegraf-agent.toml
@@ -184,6 +184,18 @@
   # If no servers are specified, then localhost is used as the host.
   servers = ["localhost"]
 
+# Telegraf plugin for gathering metrics from N Mesos masters
+[[inputs.mesos]]
+  # Timeout, in ms.
+  timeout = 100
+  # A list of Mesos masters. e.g. master1:5050, master2:5080, etc.
+  # The port can be skipped if using the default (5050)
+  # Default value is localhost:5050.
+  masters = ["localhost:5050"]
+  # Metrics groups to be collected.
+  # Default, all enabled.
+  master_collections = ["resources","master","system","slaves","frameworks","messages","evqueue","registrar"]
+
 # Read metrics from one or many MongoDB servers
 [[inputs.mongodb]]
   # An array of URI to gather stats about. Specify an ip or hostname
