--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,9 @@ machine:
 dependencies:
   override:
     - docker info
+  post:
+    - gem install fpm
+    - sudo apt-get install -y rpm python-boto
 
 test:
   override:
