Ignore boring filesystems from disk plugin
Modern Linux has a lots of boring filesystem (tmpfs on /dev, devpts on
/dev/pts, lots of cgroup on /sys/fs/cgroup/*, ...).

* Ignore filesystem with 0 bytes (this cover cgroup, devpts and other).
* Add IgnoreFS to ignore additional FS by their type. Add tmpfs and
  devtmpfs as default ignored type.

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -97,6 +97,10 @@
   # Setting mountpoints will restrict the stats to the specified mountpoints.
   # mount_points=["/"]
 
+  # Ignore some mountpoints by filesystem type. For example (dev)tmpfs (usually
+  # present on /run, /var/run, /dev/shm or /dev).
+  ignore_fs = ["tmpfs", "devtmpfs"]
+
 # Read metrics about disk IO by device
 [[inputs.diskio]]
   # By default, telegraf will gather stats for all devices including
