--- a/scripts/telegraf.service
+++ b/scripts/telegraf.service
@@ -7,6 +7,7 @@ After=network.target
 EnvironmentFile=-/etc/default/telegraf
 User=telegraf
 ExecStart=/usr/bin/telegraf -config /etc/telegraf/telegraf.conf -config-directory /etc/telegraf/telegraf.d ${TELEGRAF_OPTS}
+ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
 KillMode=process
 
