Cross platform support for the 'processes' plugin
closes #798

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -123,6 +123,10 @@
 [[inputs.mem]]
   # no configuration
 
+# Get the number of processes and group them by status
+[[inputs.processes]]
+  # no configuration
+
 # Read metrics about swap memory usage
 [[inputs.swap]]
   # no configuration
