Adding a conntrack input plugin
- Collects conntrack stats from the configured directories and files.

Applying PR feedback:

- Rebased onto master
- Updated README/CHANGELOG
- Limited lines to 80 chars
- Improved plugin docs and README
- added a dummy notlinux build file

Fixed up CHANGELOG and README after rebase

closes #1164

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1575,3 +1575,13 @@
 #   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
 #   data_format = "influx"
 
+# # Collects conntrack stats from the configured directories and files.
+# [[inputs.conntrack]]
+#   ## The following defaults would work with multiple versions of contrack. Note the nf_ and ip_
+#   ## filename prefixes are mutually exclusive across conntrack versions, as are the directory locations.
+#
+#   ## Superset of filenames to look for within the conntrack dirs. Missing files will be ignored.
+#   files = ["ip_conntrack_count","ip_conntrack_max","nf_conntrack_count","nf_conntrack_max"]
+#
+#   ## Directories to search within for the conntrack files above. Missing directrories will be ignored.
+#   dirs = ["/proc/sys/net/ipv4/netfilter","/proc/sys/net/netfilter"]
