Adding an entropy input plugin
- collects the available entropy from /proc/sys/kernel/random/entropy_avail

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -400,6 +400,12 @@
   # skip_serial_number = true
 
 
+# # Reads the available entropy from /proc/sys/kernel/random/entropy_avail
+# [[inputs.entropy]]
+#   ## (Optional) Override the file from which to collect entropy stats. Default is:
+#   proc = "/proc/sys/kernel/random/entropy_avail"
+
+
 # Get kernel statistics from /proc/stat
 [[inputs.kernel]]
   # no configuration
