--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -8,12 +8,18 @@
 #
 # Use 'telegraf -config telegraf.conf -test' to see what metrics a config
 # file would generate.
+#
+# Environment variables can be used anywhere in this config file, simply prepend
+# them with $. For strings the variable must be within quotes (ie, "$STR_VAR"),
+# for numbers and booleans they should be plain (ie, $INT_VAR, $BOOL_VAR)
 
 
 # Global tags can be specified here in key="value" format.
 [global_tags]
   # dc = "us-east-1" # will tag all metrics with dc=us-east-1
   # rack = "1a"
+  ## Environment variables can be used as tags, and throughout the config file
+  # user = "$USER"
 
 
 # Configuration for telegraf agent
@@ -1114,27 +1120,6 @@
 #                            SERVICE INPUT PLUGINS                            #
 ###############################################################################
 
-# # Generic UDP listener
-# [[inputs.udp_listener]]
-#   ## Address and port to host UDP listener on
-#   service_address = ":8092"
-# 
-#   ## Number of UDP messages allowed to queue up. Once filled, the
-#   ## UDP listener will start dropping packets.
-#   allowed_pending_messages = 10000
-# 
-#   ## UDP packet size for the server to listen for. This will depend
-#   ## on the size of the packets that the client is sending, which is
-#   ## usually 1500 bytes, but can be as large as 65,535 bytes.
-#   udp_packet_size = 1500
-# 
-#   ## Data format to consume.
-#   ## Each data format has it's own unique set of configuration options, read
-#   ## more about them here:
-#   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
-#   data_format = "influx"
-
-
 # # A Github Webhook Event collector
 # [[inputs.github_webhooks]]
 #   ## Address and port to host Webhook listener on
@@ -1270,6 +1255,27 @@
 # 
 #   ## Maximum number of concurrent TCP connections to allow
 #   max_tcp_connections = 250
+# 
+#   ## Data format to consume.
+#   ## Each data format has it's own unique set of configuration options, read
+#   ## more about them here:
+#   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
+#   data_format = "influx"
+
+
+# # Generic UDP listener
+# [[inputs.udp_listener]]
+#   ## Address and port to host UDP listener on
+#   service_address = ":8092"
+# 
+#   ## Number of UDP messages allowed to queue up. Once filled, the
+#   ## UDP listener will start dropping packets.
+#   allowed_pending_messages = 10000
+# 
+#   ## UDP packet size for the server to listen for. This will depend
+#   ## on the size of the packets that the client is sending, which is
+#   ## usually 1500 bytes, but can be as large as 65,535 bytes.
+#   udp_packet_size = 1500
 # 
 #   ## Data format to consume.
 #   ## Each data format has it's own unique set of configuration options, read
