drop cpu_time_* from procstat by default

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -894,6 +894,8 @@
 # 
 #   ## Field name prefix
 #   prefix = ""
+#   ## comment this out if you want raw cpu_time stats
+#   fielddrop = ["cpu_time_*"]
 
 
 # # Read metrics from one or many prometheus clients
