Dummy kernel plugin added for consistent config generation

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -378,6 +378,11 @@
   # skip_serial_number = true
 
 
+# Get kernel statistics from /proc/stat
+[[inputs.kernel]]
+  # no configuration
+
+
 # Read metrics about memory usage
 [[inputs.mem]]
   # no configuration
