Add kernel_vmstat input plugins

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -422,6 +422,9 @@
 [[inputs.kernel]]
   # no configuration
 
+# # Get kernel statistics from /proc/vmstat
+# [[inputs.kernel_vmstat]]
+# # no configuration
 
 # Read metrics about memory usage
 [[inputs.mem]]
