--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -429,6 +429,36 @@
 #   bcacheDevs = ["bcache0"]
 
 
+# # Pull Metric Statistics from Amazon CloudWatch
+# [[inputs.cloudwatch]]
+#   ## Amazon Region
+#   region = 'us-east-1'
+# 
+#   ## Requested CloudWatch aggregation Period (required - must be a multiple of 60s)
+#   period = '1m'
+# 
+#   ## Collection Delay (required - must account for metrics availability via CloudWatch API)
+#   delay = '1m'
+# 
+#   ## Recomended: use metric 'interval' that is a multiple of 'period' to avoid 
+#   ## gaps or overlap in pulled data
+#   interval = '1m'
+# 
+#   ## Metric Statistic Namespace (required)
+#   namespace = 'AWS/ELB'
+# 
+#   ## Metrics to Pull (optional)
+#   ## Defaults to all Metrics in Namespace if nothing is provided
+#   ## Refreshes Namespace available metrics every 1h
+#   #[[inputs.cloudwatch.metrics]]
+#   #  names = ['Latency', 'RequestCount']
+#   #	
+#   #  ## Dimension filters for Metric (optional)
+#   #  [[inputs.cloudwatch.metrics.dimensions]]
+#   #    name = 'LoadBalancerName'
+#   #    value = 'p-example'
+
+
 # # Read metrics from one or many couchbase clusters
 # [[inputs.couchbase]]
 #   ## specify servers via a url matching:
@@ -1245,10 +1275,6 @@
 #   ## calculation of percentiles. Raising this limit increases the accuracy
 #   ## of percentiles but also increases the memory usage and cpu time.
 #   percentile_limit = 1000
-# 
-#   ## UDP packet size for the server to listen for. This will depend on the size
-#   ## of the packets that the client is sending, which is usually 1500 bytes.
-#   udp_packet_size = 1500
 
 
 # # Generic TCP listener
@@ -1278,11 +1304,6 @@
 #   ## Number of UDP messages allowed to queue up. Once filled, the
 #   ## UDP listener will start dropping packets.
 #   allowed_pending_messages = 10000
-# 
-#   ## UDP packet size for the server to listen for. This will depend
-#   ## on the size of the packets that the client is sending, which is
-#   ## usually 1500 bytes, but can be as large as 65,535 bytes.
-#   udp_packet_size = 1500
 # 
 #   ## Data format to consume.
 #   ## Each data format has it's own unique set of configuration options, read
