cleanup & comment http_response def config
closes #332

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -569,6 +569,25 @@
 #   ## servers = ["socket://run/haproxy/admin.sock"]
 
 
+# # HTTP/HTTPS request given an address a method and a timeout
+# [[inputs.http_response]]
+#   ## Server address (default http://localhost)
+#   address = "http://github.com"
+#   ## Set response_timeout (default 5 seconds)
+#   response_timeout = 5
+#   ## HTTP Request Method
+#   method = "GET"
+#   ## Whether to follow redirects from the server (defaults to false)
+#   follow_redirects = true
+#   ## HTTP Request Headers (all values must be strings)
+#   # [inputs.http_response.headers]
+#   #   Host = "github.com"
+#   ## Optional HTTP Request Body
+#   # body = '''
+#   # {'fake':'data'}
+#   # '''
+
+
 # # Read flattened metrics from one or more JSON HTTP endpoints
 # [[inputs.httpjson]]
 #   ## NOTE This plugin only reads numerical measurements, strings and booleans
