--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -526,8 +526,11 @@
 #   ##
 #   ## If no servers are specified, then localhost is used as the host.
 #   servers = ["localhost:24242"]
-#   ## Only collect metrics for these domains, collect all if empty
-#   domains = []
+#   ## Type is one of "user", "domain", "ip", or "global"
+#   type = "global"
+#   ## Wildcard matches like "*.com". An empty string "" is same as "*"
+#   ## If type = "ip" filters should be <IP/network>
+#   filters = [""]
 
 
 # # Read stats from one or more Elasticsearch servers or clusters
@@ -671,6 +674,16 @@
 #   [[inputs.jolokia.metrics]]
 #     name = "heap_memory_usage"
 #     jmx  = "/java.lang:type=Memory/HeapMemoryUsage"
+#     
+#   ## This collect thread counts metrics.
+#   [[inputs.jolokia.metrics]]
+#     name = "thread_count"
+#     jmx  = "/java.lang:type=Threading/TotalStartedThreadCount,ThreadCount,DaemonThreadCount,PeakThreadCount"
+#  
+#   ## This collect number of class loaded/unloaded counts metrics.
+#   [[inputs.jolokia.metrics]]
+#     name = "class_count"
+#     jmx  = "/java.lang:type=ClassLoading/LoadedClassCount,UnloadedClassCount,TotalLoadedClassCount"
 
 
 # # Read metrics from a LeoFS Server via SNMP
