Create a template system for the graphite serializer
closes #925
closes #879

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -178,6 +178,9 @@
 #   servers = ["localhost:2003"]
 #   ## Prefix metrics name
 #   prefix = ""
+#   ## Graphite output template
+#   ## see https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_OUTPUT.md
+#   template = "host.tags.measurement.field"
 #   ## timeout in seconds for the write connection to graphite
 #   timeout = 2
 
@@ -251,22 +254,20 @@
 # [[outputs.librato]]
 #   ## Librator API Docs
 #   ## http://dev.librato.com/v1/metrics-authentication
-# 
 #   ## Librato API user
 #   api_user = "telegraf@influxdb.com" # required.
-# 
 #   ## Librato API token
 #   api_token = "my-secret-token" # required.
-# 
-#   ### Debug
+#   ## Debug
 #   # debug = false
-# 
-#   ### Tag Field to populate source attribute (optional)
-#   ### This is typically the _hostname_ from which the metric was obtained.
+#   ## Tag Field to populate source attribute (optional)
+#   ## This is typically the _hostname_ from which the metric was obtained.
 #   source_tag = "host"
-# 
 #   ## Connection timeout.
 #   # timeout = "5s"
+#   ## Output Name Template (same as graphite buckets)
+#   ## see https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_OUTPUT.md#graphite
+#   template = "host.tags.measurement.field"
 
 
 # # Configuration for MQTT server to send metrics to
