Adding a stdout output plugin

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -160,10 +160,15 @@
 #   # timeout = "5s"
 
 
+# # Send telegraf metrics to nowhere at all
+# [[outputs.discard]]
+#   # no configuration
+
+
 # # Send telegraf metrics to file(s)
 # [[outputs.file]]
-#   ## Files to write to, "stdout" is a specially handled file.
-#   files = ["stdout", "/tmp/metrics.out"]
+#   ## Files to write to.
+#   files = ["/tmp/metrics.out"]
 # 
 #   ## Data format to output.
 #   ## Each data format has it's own unique set of configuration options, read
@@ -341,6 +346,15 @@
 #   transport = "tcp"
 #   ## separator to use between input name and field name in Riemann service name
 #   separator = " "
+
+
+# # Send telegraf metrics to stdout
+# [[outputs.stdout]]
+#   ## Data format to output.
+#   ## Each data format has it's own unique set of configuration options, read
+#   ## more about them here:
+#   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_OUTPUT.md
+#   data_format = "influx"
 
 
 
