Implemented ceph collector
- records metrics from the output of mon and osd socket perf
  dumps.

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -369,6 +369,24 @@
 #                            INPUT PLUGINS                                    #
 ###############################################################################
 
+# # Collects performance metrics from the MON and OSD nodes in a Ceph storage cluster.
+# [[inputs.ceph]]
+#   ## All configuration values are optional, defaults are shown below
+#
+#    ## location of ceph binary
+#    ceph_binary = "/usr/bin/ceph"
+#
+#    ## directory in which to look for socket files
+#    socket_dir = "/var/run/ceph"
+#
+#    ## prefix of MON and OSD socket files, used to determine socket type
+#    mon_prefix = "ceph-mon"
+#    osd_prefix = "ceph-osd"
+#
+#    ## suffix used to identify socket files
+#    socket_suffix = "asok"
+
+
 # Read metrics about cpu usage
 [[inputs.cpu]]
   ## Whether to report per-cpu stats or not
