--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -438,7 +438,7 @@
 #   servers = ["myuser:mypassword@10.10.10.1:8778","10.10.10.2:8778",":8778"]
 #   ## List of metrics collected on above servers
 #   ## Each metric consists of a jmx path.
-#   ## This will collect all heap memory usage metrics from the jvm and 
+#   ## This will collect all heap memory usage metrics from the jvm and
 #   ## ReadLatency metrics for all keyspaces and tables.
 #   ## "type=Table" in the query works with Cassandra3.0. Older versions might
 #   ## need to use "type=ColumnFamily"
@@ -781,9 +781,46 @@
 #   ##  e.g.
 #   ##    root:passwd@tcp(127.0.0.1:3306)/?tls=false
 #   ##    root@tcp(127.0.0.1:3306)/?tls=false
-#   ##
+#   #
 #   ## If no servers are specified, then localhost is used as the host.
 #   servers = ["tcp(127.0.0.1:3306)/"]
+#   ## the limits for metrics form perf_events_statements
+#   perf_events_statements_digest_text_limit  = 120
+#   perf_events_statements_limit              = 250
+#   perf_events_statements_time_limit         = 86400
+#   #
+#   ## if the list is empty, then metrics are gathered from all databasee tables
+#   table_schema_databases                    = []
+#   #
+#   ## gather metrics from INFORMATION_SCHEMA.TABLES for databases provided above list
+#   gather_table_schema                       = false
+#   #
+#   ## gather thread state counts from INFORMATION_SCHEMA.PROCESSLIST
+#   gather_process_list                       = true
+#   #
+#   ## gather auto_increment columns and max values from information schema
+#   gather_info_schema_auto_inc               = true
+#   #
+#   ## gather metrics from SHOW SLAVE STATUS command output
+#   gather_slave_status                       = true
+#   #
+#   ## gather metrics from SHOW BINARY LOGS command output
+#   gather_binary_logs                        = false
+#   #
+#   ## gather metrics from PERFORMANCE_SCHEMA.TABLE_IO_WAITS_SUMMART_BY_TABLE
+#   gather_table_io_waits                     = false
+#   #
+#   ## gather metrics from PERFORMANCE_SCHEMA.TABLE_IO_WAITS_SUMMART_BY_INDEX_USAGE
+#   gather_index_io_waits                     = false
+#   #
+#   ## gather metrics from PERFORMANCE_SCHEMA.FILE_SUMMARY_BY_EVENT_NAME
+#   gather_file_events_stats                  = false
+#   #
+#   ## gather metrics from PERFORMANCE_SCHEMA.EVENTS_STATEMENTS_SUMMARY_BY_DIGEST
+#   gather_perf_events_statements             = false
+#   #
+#   ## Some queries we may want to run less often (such as SHOW GLOBAL VARIABLES)
+#   interval_slow                   = "30m"
 
 
 # # Read metrics about network interface usage
