filestat input plugin
closes #929

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -580,6 +580,16 @@
 #   data_format = "influx"
 
 
+# # Read stats about given file(s)
+# [[inputs.filestat]]
+#   ## Files to gather stats about.
+#   ## These accept standard unix glob matching rules, but with the addition of
+#   ## ** as a "super asterisk". See https://github.com/gobwas/glob.
+#   ["/etc/telegraf/telegraf.conf", "/var/log/**.log"]
+#   ## If true, read the entire file and calculate an md5 checksum.
+#   md5 = false
+
+
 # # Read metrics of haproxy, via socket or csv stats page
 # [[inputs.haproxy]]
 #   ## An array of address to gather stats about. Specify an ip on hostname
