filestat plugin config fixup

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -459,7 +459,7 @@
 #   ## Collection Delay (required - must account for metrics availability via CloudWatch API)
 #   delay = '1m'
 # 
-#   ## Recomended: use metric 'interval' that is a multiple of 'period' to avoid 
+#   ## Recomended: use metric 'interval' that is a multiple of 'period' to avoid
 #   ## gaps or overlap in pulled data
 #   interval = '1m'
 # 
@@ -471,7 +471,7 @@
 #   ## Refreshes Namespace available metrics every 1h
 #   #[[inputs.cloudwatch.metrics]]
 #   #  names = ['Latency', 'RequestCount']
-#   #	
+#   #
 #   #  ## Dimension filters for Metric (optional)
 #   #  [[inputs.cloudwatch.metrics.dimensions]]
 #   #    name = 'LoadBalancerName'
@@ -585,7 +585,7 @@
 #   ## Files to gather stats about.
 #   ## These accept standard unix glob matching rules, but with the addition of
 #   ## ** as a "super asterisk". See https://github.com/gobwas/glob.
-#   ["/etc/telegraf/telegraf.conf", "/var/log/**.log"]
+#   files = ["/etc/telegraf/telegraf.conf", "/var/log/**.log"]
 #   ## If true, read the entire file and calculate an md5 checksum.
 #   md5 = false
 
