Refactor running_output buffering

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -30,9 +30,13 @@
   ## ie, if interval="10s" then always collect on :00, :10, :20, etc.
   round_interval = true
 
+  ## Telegraf will send metrics to output in batch of at
+  ## most metric_batch_size metrics.
+  metric_batch_size = 1000
   ## Telegraf will cache metric_buffer_limit metrics for each output, and will
-  ## flush this buffer on a successful write.
-  metric_buffer_limit = 1000
+  ## flush this buffer on a successful write. This should be a multiple of
+  ## metric_batch_size and could not be less than 2 times metric_batch_size
+  metric_buffer_limit = 10000
   ## Flush the buffer whenever full, regardless of flush_interval.
   flush_buffer_when_full = true
 
