etc/telegraf.conf update

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -722,13 +722,24 @@
 # # Read JMX metrics through Jolokia
 # [[inputs.jolokia]]
 #   ## This is the context root used to compose the jolokia url
-#   context = "/jolokia/read"
+#   context = "/jolokia"
+# 
+#   ## This specifies the mode used
+#   # mode = "proxy"
+#   #
+#   ## When in proxy mode this section is used to specify further
+#   ## proxy address configurations.
+#   ## Remember to change host address to fit your environment.
+#   # [inputs.jolokia.proxy]
+#   #   host = "127.0.0.1"
+#   #   port = "8080"
+# 
 # 
 #   ## List of servers exposing jolokia read service
 #   [[inputs.jolokia.servers]]
-#     name = "stable"
-#     host = "192.168.103.2"
-#     port = "8180"
+#     name = "as-server-01"
+#     host = "127.0.0.1"
+#     port = "8080"
 #     # username = "myuser"
 #     # password = "mypassword"
 # 
@@ -738,17 +749,20 @@
 #   ## This collect all heap memory usage metrics.
 #   [[inputs.jolokia.metrics]]
 #     name = "heap_memory_usage"
-#     jmx  = "/java.lang:type=Memory/HeapMemoryUsage"
-#     
+#     mbean  = "java.lang:type=Memory"
+#     attribute = "HeapMemoryUsage"
+# 
 #   ## This collect thread counts metrics.
 #   [[inputs.jolokia.metrics]]
 #     name = "thread_count"
-#     jmx  = "/java.lang:type=Threading/TotalStartedThreadCount,ThreadCount,DaemonThreadCount,PeakThreadCount"
-#  
+#     mbean  = "java.lang:type=Threading"
+#     attribute = "TotalStartedThreadCount,ThreadCount,DaemonThreadCount,PeakThreadCount"
+# 
 #   ## This collect number of class loaded/unloaded counts metrics.
 #   [[inputs.jolokia.metrics]]
 #     name = "class_count"
-#     jmx  = "/java.lang:type=ClassLoading/LoadedClassCount,UnloadedClassCount,TotalLoadedClassCount"
+#     mbean  = "java.lang:type=ClassLoading"
+#     attribute = "LoadedClassCount,UnloadedClassCount,TotalLoadedClassCount"
 
 
 # # Read metrics from a LeoFS Server via SNMP
@@ -765,9 +779,13 @@
 #   ##
 #   # ost_procfiles = [
 #   #   "/proc/fs/lustre/obdfilter/*/stats",
-#   #   "/proc/fs/lustre/osd-ldiskfs/*/stats"
+#   #   "/proc/fs/lustre/osd-ldiskfs/*/stats",
+#   #   "/proc/fs/lustre/obdfilter/*/job_stats",
 #   # ]
-#   # mds_procfiles = ["/proc/fs/lustre/mdt/*/md_stats"]
+#   # mds_procfiles = [
+#   #   "/proc/fs/lustre/mdt/*/md_stats",
+#   #   "/proc/fs/lustre/mdt/*/job_stats",
+#   # ]
 
 
 # # Gathers metrics from the /3.0/reports MailChimp API
@@ -958,15 +976,15 @@
 # [[inputs.ping]]
 #   ## NOTE: this plugin forks the ping command. You may need to set capabilities
 #   ## via setcap cap_net_raw+p /bin/ping
-# 
+#   #
 #   ## urls to ping
 #   urls = ["www.google.com"] # required
-#   ## number of pings to send (ping -c <COUNT>)
+#   ## number of pings to send per collection (ping -c <COUNT>)
 #   count = 1 # required
 #   ## interval, in s, at which to ping. 0 == default (ping -i <PING_INTERVAL>)
 #   ping_interval = 0.0
-#   ## ping timeout, in s. 0 == no timeout (ping -t <TIMEOUT>)
-#   timeout = 0.0
+#   ## ping timeout, in s. 0 == no timeout (ping -W <TIMEOUT>)
+#   timeout = 1.0
 #   ## interface to send ping from (ping -I <INTERFACE>)
 #   interface = ""
 
