Use a timeout for docker list & stat cmds
closes #1133

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -565,6 +565,8 @@
 #   endpoint = "unix:///var/run/docker.sock"
 #   ## Only collect metrics for these containers, collect all if empty
 #   container_names = []
+#   ## Timeout for docker list, info, and stats commands
+#   timeout = "5s"
 
 
 # # Read statistics from one or many dovecot servers
@@ -599,6 +601,9 @@
 # [[inputs.exec]]
 #   ## Commands array
 #   commands = ["/tmp/test.sh", "/usr/bin/mycollector --foo=bar"]
+# 
+#   ## Timeout for each command to complete.
+#   timeout = "5s"
 # 
 #   ## measurement name suffix (for separating different commands)
 #   name_suffix = "_mycollector"
