snmp plugin: change host -> snmp_host
closes #1156

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -638,8 +638,8 @@
 # 
 #   ## If no servers are specified, then default to 127.0.0.1:1936
 #   servers = ["http://myhaproxy.com:1936", "http://anotherhaproxy.com:1936"]
-#   ## Or you can also use local socket(not work yet)
-#   ## servers = ["socket://run/haproxy/admin.sock"]
+#   ## Or you can also use local socket
+#   ## servers = ["socket:/run/haproxy/admin.sock"]
 
 
 # # HTTP/HTTPS request given an address a method and a timeout
