nstat plugin cleanups and formatting
closes #1104
closes #1138

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -940,6 +940,18 @@
 #   endpoints = ["http://localhost:4151"]
 
 
+# # Collect kernel snmp counters and network interface statistics
+# [[inputs.nstat]]
+#   ## file paths for proc files. If empty default paths will be used:
+#   ##    /proc/net/netstat, /proc/net/snmp, /proc/net/snmp6
+#   ## These can also be overridden with env variables, see README.
+#   proc_net_netstat = ""
+#   proc_net_snmp    = ""
+#   proc_net_snmp6   = ""
+#   ## dump metrics with 0 values too
+#   dump_zeros       = true
+
+
 # # Get standard NTP query metrics, requires ntpq executable.
 # [[inputs.ntpq]]
 #   ## If false, set the -n ntpq flag. Can reduce metric gather time.
