Adding Varnish HTTP Cache input plugin (#1173)
* Adding Varnish HTTP Cache input plugin

* Applying PR feedback

- Linked to varnish in input README
- Updated README/CHANGELOG
- Cleaned up sampleConfig to remove formatting
- Shorted lines to 80 chars (except where test input requires long strings)
- Using internal.RunTimeout to wrap call to varnishtat
- Added dummy file for windows

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1557,3 +1557,13 @@
 #   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
 #   data_format = "influx"
 
+# a plugin to collect stats from varnish
+# [[inputs.varnish]]
+#  ## The default location of the varnishstat binary can be overridden with:
+#  binary = "/usr/bin/varnishstat"
+#
+#  ## By default, telegraf gather stats for 3 metric points.
+#  ## Setting stats will override the defaults (["MAIN.cache_hit","MAIN.cache_miss","MAIN.uptime"]).
+#  ## stats may also be set to ["all"], which will collect all stats
+#  stats = ["MAIN.cache_hit","MAIN.cache_miss","MAIN.uptime"]
+
