--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1352,6 +1352,17 @@
 #   pools = ["redis_pool", "mc_pool"]
 
 
+# # A plugin to collect stats from Varnish HTTP Cache
+# [[inputs.varnish]]
+#   ## The default location of the varnishstat binary can be overridden with:
+#   binary = "/usr/bin/varnishstat"
+# 
+#   ## By default, telegraf gather stats for 3 metric points.
+#   ## Setting stats will override the defaults shown below.
+#   ## stats may also be set to ["all"], which will collect all stats
+#   stats = ["MAIN.cache_hit", "MAIN.cache_miss", "MAIN.uptime"]
+
+
 # # Read metrics of ZFS from arcstats, zfetchstats and vdev_cache_stats
 # [[inputs.zfs]]
 #   ## ZFS kstat path
@@ -1556,14 +1567,4 @@
 #   ## more about them here:
 #   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
 #   data_format = "influx"
-
-# a plugin to collect stats from varnish
-# [[inputs.varnish]]
-#  ## The default location of the varnishstat binary can be overridden with:
-#  binary = "/usr/bin/varnishstat"
-#
-#  ## By default, telegraf gather stats for 3 metric points.
-#  ## Setting stats will override the defaults (["MAIN.cache_hit","MAIN.cache_miss","MAIN.uptime"]).
-#  ## stats may also be set to ["all"], which will collect all stats
-#  stats = ["MAIN.cache_hit","MAIN.cache_miss","MAIN.uptime"]
 
