--- a/scripts/telegraf.service
+++ b/scripts/telegraf.service
@@ -11,7 +11,7 @@ Environment='STDERR=/var/log/telegraf/telegraf.log'
 ExecStart=/bin/sh -c "/usr/bin/telegraf -config /etc/telegraf/telegraf.conf -config-directory /etc/telegraf/telegraf.d ${TELEGRAF_OPTS} >>${STDOUT} 2>>${STDERR}"
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
-KillMode=process
+KillMode=control-group
 
 [Install]
 WantedBy=multi-user.target
