update changelog & etc/telegraf.conf

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1474,6 +1474,12 @@
 #   data_format = "influx"
 
 
+# # A Rollbar Webhook Event collector
+# [[inputs.rollbar_webhooks]]
+#   ## Address and port to host Webhook listener on
+#   service_address = ":1619"
+
+
 # # Statsd Server
 # [[inputs.statsd]]
 #   ## Address and port to host UDP listener on
