Use the DefaultURL parameter if no url is explicitly set by the user
closes #1278
closes #1277

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1176,7 +1176,7 @@
 
 # # Read metrics from one or many RabbitMQ servers via the management API
 # [[inputs.rabbitmq]]
-#   url = "http://localhost:15672" # required
+#   # url = "http://localhost:15672"
 #   # name = "rmq-server-1" # optional tag
 #   # username = "guest"
 #   # password = "guest"
