Update plugin config in config file.

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1397,9 +1397,8 @@
 
 # # A Github Webhook Event collector
 # [[inputs.github_webhooks]]
-#   ## Address and port to host Webhook listener on
-#   service_address = ":1618"
-
+#   ## Path of the global server
+#   path = "/github"
 
 # # Read metrics from Kafka topic(s)
 # [[inputs.kafka_consumer]]
@@ -1479,8 +1478,8 @@
 
 # # A Rollbar Webhook Event collector
 # [[inputs.rollbar_webhooks]]
-#   ## Address and port to host Webhook listener on
-#   service_address = ":1619"
+#   ## Path of the global server
+#   path = "/rollbar"
 
 
 # # Statsd Server
