Add webhook service address in the config file.

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -61,6 +61,9 @@
   ## If set to true, do no set the "host" tag in the telegraf agent.
   omit_hostname = false
 
+  ## Address to listen for webhook
+  webhook_service_address = ":1925"
+
 
 ###############################################################################
 #                            OUTPUT PLUGINS                                   #
