--- a/etc/telegraf_windows.conf
+++ b/etc/telegraf_windows.conf
@@ -49,6 +49,9 @@
   ## Override default hostname, if empty use os.Hostname()
   hostname = ""
 
+  ## Address to listen for webhook
+  webhook_service_address = ":1925"
+
 
 ###############################################################################
 #                                  OUTPUTS                                    #
