Made the apache input’s urls parameter optional by using a reasonable default for most users

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -454,6 +454,7 @@
 # # Read Apache status information (mod_status)
 # [[inputs.apache]]
 #   ## An array of Apache status URI to gather stats.
+#   ## Default is "http://localhost/server-status?auto".
 #   urls = ["http://localhost/server-status?auto"]
 
 
