Also added reasonable default for influxdb input plugin
to simplify configuration for most users

closes #1295

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -779,6 +779,7 @@
 #   ## See the influxdb plugin's README for more details.
 #
 #   ## Multiple URLs from which to read InfluxDB-formatted JSON
+#   ## Default is "http://localhost:8086/debug/vars".
 #   urls = [
 #     "http://localhost:8086/debug/vars"
 #   ]
