graylog input doc tweaks
closes #1261

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -573,6 +573,23 @@
 #   #    value = 'p-example'
 
 
+# # Gather health check statuses from services registered in Consul
+# [[inputs.consul]]
+#   ## Most of these values defaults to the one configured on a Consul's agent level.
+#   ## Optional Consul server address (default: "localhost")
+#   # address = "localhost"
+#   ## Optional URI scheme for the Consul server (default: "http")
+#   # scheme = "http"
+#   ## Optional ACL token used in every request (default: "")
+#   # token = ""
+#   ## Optional username used for request HTTP Basic Authentication (default: "")
+#   # username = ""
+#   ## Optional password used for HTTP Basic Authentication (default: "")
+#   # password = ""
+#   ## Optional data centre to query the health checks from (default: "")
+#   # datacentre = ""
+
+
 # # Read metrics from one or many couchbase clusters
 # [[inputs.couchbase]]
 #   ## specify servers via a url matching:
@@ -698,6 +715,43 @@
 #   files = ["/var/log/**.log"]
 #   ## If true, read the entire file and calculate an md5 checksum.
 #   md5 = false
+
+
+# # Read flattened metrics from one or more GrayLog HTTP endpoints
+# [[inputs.graylog]]
+#   ## API endpoint, currently supported API:
+#   ##
+#   ##   - multiple  (Ex http://<host>:12900/system/metrics/multiple)
+#   ##   - namespace (Ex http://<host>:12900/system/metrics/namespace/{namespace})
+#   ##
+#   ## For namespace endpoint, the metrics array will be ignored for that call.
+#   ## Endpoint can contain namespace and multiple type calls.
+#   ##
+#   ## Please check http://[graylog-server-ip]:12900/api-browser for full list
+#   ## of endpoints
+#   servers = [
+#     "http://[graylog-server-ip]:12900/system/metrics/multiple",
+#   ]
+#
+#   ## Metrics list
+#   ## List of metrics can be found on Graylog webservice documentation.
+#   ## Or by hitting the the web service api at:
+#   ##   http://[graylog-host]:12900/system/metrics
+#   metrics = [
+#     "jvm.cl.loaded",
+#     "jvm.memory.pools.Metaspace.committed"
+#   ]
+#
+#   ## Username and password
+#   username = ""
+#   password = ""
+#
+#   ## Optional SSL Config
+#   # ssl_ca = "/etc/telegraf/ca.pem"
+#   # ssl_cert = "/etc/telegraf/cert.pem"
+#   # ssl_key = "/etc/telegraf/key.pem"
+#   ## Use SSL but skip chain & host verification
+#   # insecure_skip_verify = false
 
 
 # # Read metrics of haproxy, via socket or csv stats page
@@ -1403,20 +1457,6 @@
 #   ## Glob matching can be used, ie, stats = ["MAIN.*"]
 #   ## stats may also be set to ["*"], which will collect all stats
 #   stats = ["MAIN.cache_hit", "MAIN.cache_miss", "MAIN.uptime"]
-
-
-# # Read metrics of ZFS from arcstats, zfetchstats and vdev_cache_stats
-# [[inputs.zfs]]
-#   ## ZFS kstat path
-#   ## If not specified, then default is:
-#   kstatPath = "/proc/spl/kstat/zfs"
-#
-#   ## By default, telegraf gather all zfs stats
-#   ## If not specified, then default is:
-#   kstatMetrics = ["arcstats", "zfetchstats", "vdev_cache_stats"]
-#
-#   ## By default, don't gather zpool stats
-#   poolMetrics = false
 
 
 # # Reads 'mntr' stats from one or many zookeeper servers
