Create dummy zfs plugin file

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1459,6 +1459,20 @@
 #   stats = ["MAIN.cache_hit", "MAIN.cache_miss", "MAIN.uptime"]
 
 
+# # Read metrics of ZFS from arcstats, zfetchstats, vdev_cache_stats, and pools
+# [[inputs.zfs]]
+#   ## ZFS kstat path. Ignored on FreeBSD
+#   ## If not specified, then default is:
+#   # kstatPath = "/proc/spl/kstat/zfs"
+#
+#   ## By default, telegraf gather all zfs stats
+#   ## If not specified, then default is:
+#   # kstatMetrics = ["arcstats", "zfetchstats", "vdev_cache_stats"]
+#
+#   ## By default, don't gather zpool stats
+#   # poolMetrics = false
+
+
 # # Reads 'mntr' stats from one or many zookeeper servers
 # [[inputs.zookeeper]]
 #   ## An array of address to gather stats about. Specify an ip or hostname
