Update telegraf config.

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1488,12 +1488,6 @@
 #                            SERVICE INPUT PLUGINS                            #
 ###############################################################################
 
-# # A Github Webhook Event collector
-# [[inputs.github_webhooks]]
-#   ## Address and port to host Webhook listener on
-#   service_address = ":1618"
-
-
 # # Read metrics from Kafka topic(s)
 # [[inputs.kafka_consumer]]
 #   ## topic(s) to consume
@@ -1568,12 +1562,6 @@
 #   ## more about them here:
 #   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
 #   data_format = "influx"
-
-
-# # A Rollbar Webhook Event collector
-# [[inputs.rollbar_webhooks]]
-#   ## Address and port to host Webhook listener on
-#   service_address = ":1619"
 
 
 # # Statsd Server
@@ -1670,3 +1658,14 @@
 #   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
 #   data_format = "influx"
 
+
+# # A Webhooks Event collector
+# [[inputs.webhooks]]
+#  ## Address and port to host Webhook listener on
+#  service_address = ":1619"
+#
+#  [inputs.webhooks.github]
+#    path = "/github"
+#
+#  [inputs.webhooks.rollbar]
+#    path = "/rollbar"
