change "default" retention policy to ""
closes #1374

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -81,8 +81,8 @@
   ## The target database for metrics (telegraf will create it if not exists).
   database = "telegraf" # required
 
-  ## Retention policy to write to.
-  retention_policy = "default"
+  ## Retention policy to write to. Empty string writes to the default rp.
+  retention_policy = ""
   ## Write consistency (clusters only), can be: "any", "one", "quorom", "all"
   write_consistency = "any"
 
