--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -197,6 +197,7 @@
 # # Configuration for Graphite server to send metrics to
 # [[outputs.graphite]]
 #   ## TCP endpoint for your graphite instance.
+#   ## If multiple endpoints are configured the output will be load balanced.
 #   servers = ["localhost:2003"]
 #   ## Prefix metrics name
 #   prefix = ""
