Added option "total/perdevice" to Docker input
Like cpu plugin, add two option "total" and "perdevice" to send network
and diskio metrics either per device and/or the sum of all devices.

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -666,6 +666,11 @@
 #   container_names = []
 #   ## Timeout for docker list, info, and stats commands
 #   timeout = "5s"
+#   ## Whether to report for each container per-device blkio (8:0, 8:1...) and
+#   ## network (eth0, eth1, ...) stats or not
+#   perdevice = true
+#   ## Whether to report for each container total blkio and network stats or not
+#   total = false
 
 
 # # Read statistics from one or many dovecot servers
