misc fixes related to logging

--- a/Arista/ConfigFiles/telegraf-cassandra.conf
+++ b/Arista/ConfigFiles/telegraf-cassandra.conf
@@ -43,7 +43,7 @@
   # Run telegraf in debug mode
   debug = false
   # Run telegraf in quiet mode
-  quiet = false
+  quiet = true
   # Override default hostname, if empty use os.Hostname()
   hostname = ""
 
