--- a/Arista/ConfigFiles/telegraf-linux.conf
+++ b/Arista/ConfigFiles/telegraf-linux.conf
@@ -55,7 +55,7 @@
   ## Run telegraf in debug mode
   debug = false
   ## Run telegraf in quiet mode
-  quiet = false
+  quiet = true
   ## Override default hostname, if empty use os.Hostname()
   hostname = ""
   ## If set to true, do no set the "host" tag in the telegraf agent.
