adding snmptranslate MIB-lookup integration

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1379,7 +1379,7 @@
 
 # # Retrieves SNMP values from remote agents
 # [[inputs.snmp]]
-#   agents = [ "127.0.0.1:161" ]
+#   agents = ["127.0.0.1:161"]
 #   version = 2 # Values: 1, 2, or 3
 #
 #   ## SNMPv1 & SNMPv2 parameters
@@ -1399,6 +1399,8 @@
 #
 #   ## measurement name
 #   name = "system"
+#   ## SNMP fields are gotten by using an "snmpget" request. If a name is not
+#   ## specified, we attempt to use snmptranslate on the OID to get the MIB name.
 #   [[inputs.snmp.field]]
 #     name = "hostname"
 #     oid = ".1.2.3.0.1.1"
@@ -1406,13 +1408,14 @@
 #     name = "uptime"
 #     oid = ".1.2.3.0.1.200"
 #   [[inputs.snmp.field]]
-#     name = "load"
 #     oid = ".1.2.3.0.1.201"
 #
 #   [[inputs.snmp.table]]
-#     # measurement name
+#     ## measurement name
 #     name = "remote_servers"
-#     inherit_tags = [ "hostname" ]
+#     inherit_tags = ["hostname"]
+#     ## SNMP table fields must be specified individually. If the table field has
+#     ## multiple rows, they will all be gotten.
 #     [[inputs.snmp.table.field]]
 #       name = "server"
 #       oid = ".1.2.3.0.0.0"
