Completely refactor snmp plugin
- use snmpget/snmpwalk terminology
- use snmptranslate to get MIBs

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -1397,35 +1397,49 @@
 #   #priv_protocol = ""            # Values: "DES", "AES", ""
 #   #priv_password = ""
 #
-#   ## measurement name
-#   name = "system"
-#   ## SNMP fields are gotten by using an "snmpget" request. If a name is not
-#   ## specified, we attempt to use snmptranslate on the OID to get the MIB name.
-#   [[inputs.snmp.field]]
-#     name = "hostname"
-#     oid = ".1.2.3.0.1.1"
-#   [[inputs.snmp.field]]
-#     name = "uptime"
-#     oid = ".1.2.3.0.1.200"
-#   [[inputs.snmp.field]]
-#     oid = ".1.2.3.0.1.201"
+#   ## Each 'tag' is an "snmpget" request. Tags are inherited by snmp 'walk'
+#   ## and 'get' requests specified below. If a name for the tag is not provided,
+#   ## we will attempt to use snmptranslate on the OID to get the MIB name.
+#   [[inputs.snmp.tag]]
+#     name = "sys_name" # optional, tag name
+#     oid = ".1.3.6.1.2.1.1.5.0"
+#   [[inputs.snmp.tag]]
+#     name = "sys_location"
+#     oid = ".1.3.6.1.2.1.1.6.0"
 #
-#   [[inputs.snmp.table]]
-#     ## measurement name
-#     name = "remote_servers"
-#     inherit_tags = ["hostname"]
-#     ## SNMP table fields must be specified individually. If the table field has
-#     ## multiple rows, they will all be gotten.
-#     [[inputs.snmp.table.field]]
-#       name = "server"
-#       oid = ".1.2.3.0.0.0"
-#       is_tag = true
-#     [[inputs.snmp.table.field]]
-#       name = "connections"
-#       oid = ".1.2.3.0.0.1"
-#     [[inputs.snmp.table.field]]
-#       name = "latency"
-#       oid = ".1.2.3.0.0.2"
+#   ## optional, name of the measurement that each 'get' field will be under.
+#   name = "snmp"
+#   ## Each 'get' is an "snmpget" request. If a name for the field is not provided,
+#   ## we will attempt to use snmptranslate on the OID to get the MIB name.
+#   [[inputs.snmp.get]]
+#     name = "snmp_in_packets" # optional, field name
+#     oid = ".1.3.6.1.2.1.11.1.0"
+#   [[inputs.snmp.get]]
+#     oid = ".1.3.6.1.2.1.11.2.0"
+#
+#   ## An SNMP walk will do an "snmpwalk" from the given root OID.
+#   ## Each OID it encounters will be converted into a field on the measurement.
+#   ## We will attempt to use snmptranslate on the OID to get the MIB names for
+#   ## each field.
+#   [[inputs.snmp.walk]]
+#     ## optional, inherit_tags specifies which top-level tags to inherit.
+#     ## Globs are supported.
+#     inherit_tags = ["sys_*"]
+#     name = "snmp_metrics" # measurement name
+#     root_oid = ".1.3.6.1.2.1.11"
+#
+#   [[inputs.snmp.walk]]
+#     ## optional, 'include' specifies MIB names to include in the walk.
+#     ## 'exclude' is also available, although they're mutually-exclusive.
+#     ## Globs are supported.
+#     include = ["if*"]
+#     name = "ifTable"
+#     root_oid = ".1.3.6.1.2.1.2.2"
+#
+#   [[inputs.snmp.walk]]
+#     exclude = ["ifAlias"]
+#     name = "ifXTable"
+#     root_oid = ".1.3.6.1.2.1.31.1.1"
 
 
 # # DEPRECATED: This will be removed in a future release.
