Add Pusher output to etc/telegraf.conf

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -392,6 +392,17 @@
 #   # listen = ":9126"
 
 
+# # Configuration for Pusher output.
+# [[outputs.pusher]]
+#   ## Pusher Credentials
+#   #app_id = ""
+#   #app_key = ""
+#   #app_secret = ""
+#   #channel_name = ""
+#
+#   data_format = "json"
+
+
 # # Configuration for the Riemann server to send metrics to
 # [[outputs.riemann]]
 #   ## URL of server
