--- a/scripts/telegraf.service
+++ b/scripts/telegraf.service
@@ -9,7 +9,8 @@ User=telegraf
 Environment='STDOUT=/var/log/telegraf/telegraf.log'
 Environment='STDERR=/var/log/telegraf/telegraf.log'
 ExecStart=/bin/sh -c "exec /usr/bin/telegraf -config /etc/telegraf/telegraf.conf -config-directory /etc/telegraf/telegraf.d ${TELEGRAF_OPTS} >>${STDOUT} 2>>${STDERR}"
-ExecReload=/bin/kill -HUP $MAINPID
+ExecStop=/usr/bin/killall telegraf
+ExecReload=/usr/bin/killall telegraf
 Restart=on-failure
 KillMode=control-group
 
