Add host and secure options to Pusher output.

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -399,6 +399,8 @@
 #   #app_key = ""
 #   #app_secret = ""
 #   #channel_name = ""
+#   secure = true
+#   host = "app.pusher.com"
 #
 #   data_format = "json"
 
