Fix default Pusher hostname

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -402,7 +402,7 @@
 #   #app_secret = ""
 #   #channel_name = ""
 #   secure = true
-#   host = "app.pusher.com"
+#   host = "api.pusherapp.com"
 #
 #   data_format = "json"
 
